syntax = "proto3";
import "google/protobuf/any.proto";
// protoc --go_out=plugins=grpc:. tradingrpc.proto 

message DataResponse {
        //success:1
	int32 StatusCode  = 1; 
	google.protobuf.Any Data = 2;
	string Msg   = 3; 
	string ErrorMsg = 4; 
}

message EmptyData {
	map<string, string>  Data = 1;
}

message DataRequest {
	map<string, string>  Parameters = 1;
}

message Kline {
     int32 Id     = 1;
     int64 Ts     = 2;
     float Open   = 3;
     float Close  = 4;
     float High   = 5;  
     float Low    = 6;
     float Amount = 7;
     float Count  = 8;
     float Volume = 9;

    }

message Klines {
    bool Result  = 1;
    repeated Kline Data = 2;
}

message History {
	 int32 Id       = 1;
	 int64 Ts       = 2;
	 float Price    = 3;
	 float Amount   = 4;
	 bool Direction = 5;
}

message Historys {
    bool Result  = 1;
    repeated History Data = 2;
}




service RpcService {
	rpc Request (DataRequest) returns (DataResponse);


}

